# url_method_status_code

./: README.md  configs.py  constants.py  main.py  pyproject.toml  test task - python junior.md
tests/: conftest.py  test_check_urls.py  test_delete_unnecessary_methods.py  test_http_method_availability.py  test_is_link.py  test_main.py  test_methods.py
