[tool.poetry]
name = "url_method_status_code"
version = "0.1.0"
description = ""
authors = ["Анжела <anzhela.namistyuk@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
validators = "^0.20.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
